--- a/.github/workflows /main.yml
+++ b/.github/workflows /main.yml
@@ -29,18 +29,10 @@ jobs:
       # Step 4: Install Trivy
       - name: Install Trivy
         run: |
-          sudo apt-get update
-          sudo apt-get install -y wget apt-transport-https gnupg lsb-release
-          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo gpg --dearmor -o /usr/share/keyrings/trivy-archive-keyring.gpg
-          echo "deb [signed-by=/usr/share/keyrings/trivy-archive-keyring.gpg] https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" | sudo tee /etc/apt/sources.list.d/trivy.list
-          sudo apt-get update
-          sudo apt-get install -y trivy
+          wget -q -O /tmp/trivy.tar.gz https://github.com/aquasecurity/trivy/releases/latest/download/trivy_linux_amd64.tar.gz
+          tar -xzvf /tmp/trivy.tar.gz -C /tmp/
+          sudo mv /tmp/trivy /usr/local/bin/
 
-      # Step 5: Run Trivy for container image scanning (optional)
-      # Replace 'your-container-image' with the actual image name if applicable.
-      - name: Run Trivy for Container Image
-        run: trivy image your-container-image || true
-
-      # Step 6: Run Trivy for file system scanning
+      # Step 5: Run Trivy for file system scanning
       - name: Run Trivy for File System
         run: trivy filesystem --exit-code 1 --severity HIGH,CRITICAL ./ || true
