--- a/package.json
+++ b/package.json
@@ -12,3 +12,16 @@
     "minimist": "0.2.0"  // intentionally vulnerable version
   }
 }
+{
+  "name": "mend-renovate-poc",
+  "version": "1.0.0",
+  "dependencies": {
+    "lodash": "4.17.11",
+    "minimist": "0.2.0",
+    "event-stream": "3.3.6",
+    "hoek": "2.16.3",
+    "jquery": "1.7.0",
+    "marked": "0.3.5",
+    "debug": "2.6.8"
+  }
+}
